kubernetes-dashboard/dashboard.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-dashboard
 namespace: kubernetes-dashboard

# when handling ssl from the ingress
# annotations:
#   cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   kubernetes.io/ingress.class: "nginx"
#   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#   nginx.ingress.kubernetes.io/force-ssl-redirection: "true"

# when handling ssl in the external nginx load balancer
 annotations:
   kubernetes.io/ingress.class: "nginx"
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"


spec:
 ingressClassName: nginx
# tls:
#   - hosts:
#       - dashboard.kamrul.store
#     secretName: tls-secret-dashboard # different in every ingress. the file is unique in all ingress.
 rules:
   - host: dashboard.kamrul.store
     http:
       paths:
         - pathType: Prefix
           path: /
           backend:
             service:
               name: kubernetes-dashboard-kong-proxy
               port:
                 number: 443
